feat: proect until uas

--- a/P5/app/src/main/res/layout/activity_calculate.xml
+++ b/P5/app/src/main/res/layout/activity_calculate.xml
@@ -6,4 +6,115 @@
     android:layout_height="match_parent"
     tools:context=".Calculate">
 
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Penghitungan Pajak"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:text="Gaji "
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txtGaji"
+        android:layout_width="239dp"
+        android:layout_height="52dp"
+        android:ems="10"
+        android:hint="Masukan Nominal Gaji"
+        android:inputType="number"
+        android:textAlignment="textStart"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Pendapatan Lain"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/txtGaji"
+        app:layout_constraintTop_toBottomOf="@+id/txtGaji" />
+
+    <EditText
+        android:id="@+id/txtPendapatanLain"
+        android:layout_width="239dp"
+        android:layout_height="53dp"
+        android:ems="10"
+        android:hint="Masukan Pendapatan Lain"
+        android:inputType="number"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/textView14"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Pengurang Pajak"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/txtPendapatanLain"
+        app:layout_constraintTop_toBottomOf="@+id/txtPendapatanLain" />
+
+    <EditText
+        android:id="@+id/txtPengurangPajak"
+        android:layout_width="240dp"
+        android:layout_height="53dp"
+        android:ems="10"
+        android:hint="Masukan Pengurang Pajak"
+        android:inputType="number"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/textView15"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="Tanggungan"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPengurangPajak" />
+
+    <EditText
+        android:id="@+id/txtTanggungan"
+        android:layout_width="243dp"
+        android:layout_height="43dp"
+        android:ems="10"
+        android:hint="Masukan Tanggungan (Orang)"
+        android:inputType="number"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
+    <Button
+        android:id="@+id/btnSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/light_blue_primary"
+        android:text="Hitung Pajak"
+        app:layout_constraintStart_toStartOf="@+id/txtTanggungan"
+        app:layout_constraintTop_toBottomOf="@+id/txtTanggungan" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
