--- a/P5/app/src/main/res/values/colors.xml
+++ b/P5/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="yellow">#fdd835</color>
+    <color name="light_blue_primary">#0277bd</color>
+    <color name="light_blue_light">#58a5f0</color>
+    <color name="light_blue_dark">#004c8c</color>
     <color name="blue_primary">#303f9f</color>
     <color name="blue_primaryDark">#001970</color>
     <color name="blue_primaryLight">#666ad1</color>
