--- a/P5/app/src/main/res/drawable/google_forms.xml
+++ b/P5/app/src/main/res/drawable/google_forms.xml
@@ -1,4 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="m346,120h96.211l-111.211,-111.211v96.211c0,8.276 6.724,15 15,15z"/>
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="m106,512h300c24.814,0 45,-20.186 45,-45v-317h-105c-24.814,0 -45,-20.186 -45,-45v-105h-195c-24.814,0 -45,20.186 -45,45v422c0,24.814 20.186,45 45,45zM196,241h150c8.291,0 15,6.709 15,15s-6.709,15 -15,15h-150c-8.291,0 -15,-6.709 -15,-15s6.709,-15 15,-15zM196,301h150c8.291,0 15,6.709 15,15s-6.709,15 -15,15h-150c-8.291,0 -15,-6.709 -15,-15s6.709,-15 15,-15zM196,361h150c8.291,0 15,6.709 15,15s-6.709,15 -15,15h-150c-8.291,0 -15,-6.709 -15,-15s6.709,-15 15,-15zM136,241c8.284,0 15,6.716 15,15s-6.716,15 -15,15 -15,-6.716 -15,-15 6.716,-15 15,-15zM136,301c8.284,0 15,6.716 15,15s-6.716,15 -15,15 -15,-6.716 -15,-15 6.716,-15 15,-15zM136,361c8.284,0 15,6.716 15,15s-6.716,15 -15,15 -15,-6.716 -15,-15 6.716,-15 15,-15z"/>
+</vector>
