--- a/UAS/app/src/main/res/layout/activity_form_input.xml
+++ b/UAS/app/src/main/res/layout/activity_form_input.xml
@@ -6,4 +6,205 @@
     android:layout_height="match_parent"
     tools:context=".FormInput">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Harga Pangan di Pasar"
+        android:textColor="@color/blue_primary"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Form Harga Pangan"
+        android:textColor="@color/blue_primaryLight"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <LinearLayout style="@style/myLinearLayout">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    style="@style/myTextLabel"
+                    android:text="Nama" />
+
+                <EditText
+                    android:id="@+id/input_barang"
+                    style="@style/myEditText"
+                    android:hint="Masukan Nama Barang" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/myLinearLayout">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    style="@style/myTextLabel"
+                    android:text="Keterangan Barang" />
+
+                <EditText
+                    android:id="@+id/input_keterangan"
+                    style="@style/myEditText"
+                    android:gravity="start|top"
+                    android:hint="Masukan Keterangan Barang Pangan"
+                    android:inputType="textMultiLine" />
+
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/myLinearLayout">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    style="@style/myTextLabel"
+                    android:text="Nomor Barang" />
+
+                <EditText
+                    android:id="@+id/input_nomor_barang"
+                    style="@style/myEditText"
+                    android:hint="Masukan Nomor Barang"
+                    android:inputType="number" />
+            </LinearLayout>
+
+
+            <LinearLayout style="@style/myLinearLayout">
+
+                <TextView
+                    android:id="@+id/textView10"
+                    style="@style/myTextLabel"
+                    android:text="Jenis Barang" />
+
+                <EditText
+                    android:id="@+id/input_jenis_barang"
+                    style="@style/myEditText"
+                    android:layout_width="48dp"
+                    android:hint="Masukan Jenis Barang" />
+
+                <Spinner
+                    android:id="@+id/tipe_buah"
+                    style="@style/myEditText"
+                    android:layout_width="0dp"
+                    android:entries="@array/angka" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/myLinearLayout">
+
+                <TextView
+                    android:id="@+id/textView12"
+                    style="@style/myTextLabel"
+                    android:text="Jumlah Barang" />
+
+                <EditText
+                    android:id="@+id/jml_barang"
+                    style="@style/myEditText"
+                    android:hint="Masukan Jumlah Barang" />
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/myLinearLayout"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView13"
+                    style="@style/myTextLabel"
+                    android:layout_width="131dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Menggunakan plastic?" />
+
+                <RadioGroup
+                    android:id="@+id/pakai_plastic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:id="@+id/rb_ya"
+                        style="@style/myRadioButton"
+                        android:text="Ya" />
+
+                    <RadioButton
+                        android:id="@+id/rb_tidak"
+                        style="@style/myRadioButton"
+                        android:text="Tidak" />
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <LinearLayout style="@style/myLinearLayout">
+
+                <Switch
+                    android:id="@+id/s_lunas"
+                    style="@style/myTextLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Lunas?"
+                    android:textOff="Engga"
+                    android:textOn="Ya" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/myLinearLayout"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    style="@style/myTextLabel"
+                    android:layout_width="match_parent"
+                    android:text="Barang Diterima" />
+
+                <CheckBox
+                    android:id="@+id/cb_diterima"
+                    android:layout_width="wrap_content"
+                    android:layout_height="31dp"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/blue_primary"
+                    android:text="Diterima"
+                    android:textColor="@color/blue_primary"
+                    android:textSize="12dp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/myLinearLayout">
+
+
+                <Button
+                    android:id="@+id/btn_submit"
+                    style="@style/mySubmitButton"
+                    android:text="Simpan Data" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
